# aind-vr-foraging-primary-data-nwb-packaging

./: CLAUDE.md  README.md  event_to_trial_table.md
.codeocean/: datasets.json  environment.json
code/: data_contract.py  events.py  events_sidecar.json  helper.py  models.py  processing.py  run  run_capsule.py  sandbox.ipynb  test-trialstable.ipynb  utils.py  v0_3_0.py  v0_4_0.py
environment/: Dockerfile  pyproject.toml
