[project]
name = "aind-vr-foraging-primary-data-nwb-packaging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aind-behavior-vr-foraging",
    "aind-data-schema>2.0",
    "contraqctor",
    "aind-nwb-utils",
    "hdmf-zarr",
    "pynwb",
    "ndx-events"
]

[tool.uv.sources]
ndx-events = { git = "https://github.com/rly/ndx-events.git"}
aind-nwb-utils = { git = "https://github.com/AllenNeuralDynamics/aind-nwb-utils.git", rev = "dc8ed9009c2cc2464a0a7c8421a68730606ecae0"}
