[project]
name = "aind-vr-foraging-primary-data-nwb-packaging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aind-behavior-vr-foraging",
    "aind-data-schema>2.0",
    "aind-data-access-api[docdb]",
    "contraqctor",
    "aind-nwb-utils",
    "hdmf-zarr",
    "pynwb",
    "ndx-events"
]

[tool.uv.sources]
ndx-events = { git = "https://github.com/rly/ndx-events.git"}
